-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0 Beta 1
-
-
213fdd341038d5256a017555570e3359cf111001 d1ac941ce74af8aabfc2aa522e48ba826d3080f6
Steps to reproduce:
- create Qt Quick Application from scratch
- set a breakpoint onto a property assignment (if it matters: I had used
anchors.fill: parent
and
anchors.centerIn:parent
- start debugging
Current result:
- debugger stops at one of the locations (Application Output pane shows some error regarding QQmlExpression depends on non-notifyable properties)
- hit continue
- debugger stops at the other location
- hit continue
- debugger is back at the first location
- this seems to be possible endless
| For Gerrit Dashboard: QTBUG-70989 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 242182,3 | QML Tooling: Don't read properties in order to count them | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 242183,3 | QML Tooling: Prevent property capture while collecting data | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |