QML Tooling: Don't read properties in order to count them

Reading properties may have side effects and we don't actually need the
values here.

Task-number: QTBUG-70989
Change-Id: If9f43f3c6a390ebd0ab1d1375fd021189adb10f7
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>